add pipeline files

--- a/config.conf
+++ b/config.conf
@@ -1,7 +1,11 @@
-6
-cps false 0 0
-cps true 0 0
-ra false 2
+10
+ra true 0
+ra true 1
 ra true 2
-ra false 4
+ra true 3
 ra true 4
+ra false 0
+ra false 1
+ra false 2
+ra false 3
+ra false 4
